--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2565,6 +2565,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     width: auto;  /* Maintain aspect ratio */
     margin-right:20px;
     display:none;
+    max-height: 200px;
 }
 
 .failedcookiebanner{
