--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ new            </p>
                 <div class="reviewerimg" style="background-color: #bb00ff;"></div><p class="reviewer">Nate</p>
                 <br>
                 <br>
-                <p class="projecttype">YT Banner (103.7K Subs)</p>
+                <p class="projecttype">YT Banner (107K+ Subs)</p>
             </div>
             <div data-aos="flip-down" class="review">
                 <h1>
