--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2620,6 +2620,14 @@ window.onload = function() {
         const cookiebannerHeight = cookiebanner.offsetHeight;
         cookiebannerimage.style.height = `${cookiebannerHeight}px`;
     }, 5); // Adjust the timeout duration if necessary
+    setTimeout(() => {
+        const cookiebannerHeight = cookiebanner.offsetHeight;
+        cookiebannerimage.style.height = `${cookiebannerHeight}px`;
+    }, 10); // Adjust the timeout duration if necessary
+    setTimeout(() => {
+        const cookiebannerHeight = cookiebanner.offsetHeight;
+        cookiebannerimage.style.height = `${cookiebannerHeight}px`;
+    }, 20); // Adjust the timeout duration if necessary
 
     /*
     basically, after 1 ms we adjust the height of the image to match the height of the banner
