--- a/mcacountdown/Information/cookiepolicy.html
+++ b/mcacountdown/Information/cookiepolicy.html
@@ -48,8 +48,7 @@ window.dataLayer = window.dataLayer || [];
 <p>Countdown utilizes cookies and other similar technologies to enhance your experience and improve the website's performance. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
 
 <h1>Types of Cookies We Use</h1>
-<p>We use two main types of cookies:</p>
-<p>You can opt out of cookies in several ways:
+<p>We use two main types of cookies:
   <br>
   - <strong>Essential Cookies</strong>: These cookies are crucial for the basic functioning of the website, such as saving your preferences in the options/settings menu.
   <br>
