--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -336,6 +336,8 @@ body {
     
     background-image: url("Backgrounds/dashboardbg.png") !important;
     background-size: cover; /* Ensure the image covers the entire background */
+    background-position:center;
+    background-attachment:fixed;
     background-repeat: no-repeat; /* Prevent the image from repeating */
 }
 
