--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -336,7 +336,7 @@ body {
     
     background-image: url("Backgrounds/dashboardbg.png") !important;
     background-size: cover; /* Ensure the image covers the entire background */
-    background-position:center;
+    background-position:bottom center;
     background-attachment:fixed;
     background-repeat: no-repeat; /* Prevent the image from repeating */
 }
