--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2554,14 +2554,14 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     background: rgb(0, 0, 0);
     height: 80px auto;
     width:75vw;
-    box-shadow: 0.3px 0.5px 0.7px rgb(20,20,20),
-    1.5px 2.9px 3.7px -0.4px rgb(20,20,20),
-    2.7px 5.4px 6.8px -0.7px rgb(20,20,20),
-    4.5px 8.9px 11.2px -1.1px rgb(20,20,20),
-    7.1px 14.3px 18px -1.4px rgb(20,20,20),
-    11.2px 22.3px 28.1px -1.8px rgb(20,20,20),
-    17px 33.9px 42.7px -2.1px rgb(20,20,20),
-    25px 50px 62.9px -2.5px rgb(20,20,20);
+    box-shadow: 0.3px 0.5px 0.7px rgba(20,20,20,0.3),
+    1.5px 2.9px 3.7px -0.4px rgba(20,20,20,0.3),
+    2.7px 5.4px 6.8px -0.7px rgba(20,20,20,0.3),
+    4.5px 8.9px 11.2px -1.1px rgba(20,20,20,0.3),
+    7.1px 14.3px 18px -1.4px rgba(20,20,20,0.3),
+    11.2px 22.3px 28.1px -1.8px rgba(20,20,20,0.3),
+    17px 33.9px 42.7px -2.1px rgba(20,20,20,0.3),
+    25px 50px 62.9px -2.5px rgba(20,20,20,0.3);
 
 }
 
