--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2549,7 +2549,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     top:50px;
     left:12.5vw;
     color:white;
-    border-radius: 20px;
+    border-radius: 1000px 20px 20px 1000px;
     z-index:1000000;
     background: rgb(0, 0, 0);
     height: 80px auto;
