--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -99,7 +99,7 @@
     <div class="cookiebanner" id="cookie-banner">
         <img id="cookiebannerimg" src="Backgrounds/cookie_bite.png">
         <div>
-            <p style="font-family:Dosis; font-size:25px;"> We use cookies and similar technologies to save preferences and obtain anonymous analytics. <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
+            <p style="font-family:Dosis; font-size:25px;"> We use cookies and similar technologies for preferences and anonymous analytics. <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
         </div>
     </div>
 
