--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -434,7 +434,11 @@
 		<br>
 		<br>
 		<br>
-		<h2 style="font-family: 'Dosis';">Progress Bar Style</h2>
+		<h2 style="font-family: 'Dosis';">Position</h2>
+		<a class="aintext selectedfontpicker"><i class="fa-solid fa-ban"></i></a>
+                <a class="aintext fontpicker">Bottom Bar</a>
+                <a class="aintext fontpicker">Top Bar</a>
+                <a class="aintext fontpicker">Clock Bar</a>
                 <br>
                 <br>
                 <br>
