--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -435,10 +435,10 @@
 		<br>
 		<br>
 		<h2 style="font-family: 'Dosis';">Position</h2>
-		<a class="aintext selectedfontpicker"><img src="progressbaroptionsicons/1no.png"/></a>
-                <a class="aintext fontpicker"><img src="progressbaroptionsicons/2bottom.png"/></a>
-                <a class="aintext fontpicker"><img src="progressbaroptionsicons/3middle.png"/></a>
-                <a class="aintext fontpicker"><img src="progressbaroptionsicons/4top.png"/></a>
+		<a class="aintext selectedfontpicker"><img style="width:0.9in" src="progressbaroptionsicons/1no.png"/></a>
+                <a class="aintext fontpicker"><img style="width:0.9in" src="progressbaroptionsicons/2bottom.png"/></a>
+                <a class="aintext fontpicker"><img style="width:0.9in" src="progressbaroptionsicons/3middle.png"/></a>
+                <a class="aintext fontpicker"><img style="width:0.9in" src="progressbaroptionsicons/4top.png"/></a>
                 <br>
                 <br>
                 <br>
