--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -287,7 +287,7 @@
                     </div>
 
                 </div>
-                <h1 id="customizationoptions">Customization Options</h1>
+                <h1 id="customizationoptions">Customization</h1>
                 <br>
                 <br>
                 <br>
