--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -435,10 +435,10 @@
 		<br>
 		<br>
 		<h2 style="font-family: 'Dosis';">Position</h2>
-		<a class="aintext selectedfontpicker"><img style="width:1in; height:1in;" src="progressbaroptionsicons/1no.png"/></a>
-                <a class="aintext fontpicker"><img style="width:1in; height:1in;" src="progressbaroptionsicons/2bottom.png"/></a>
-                <a class="aintext fontpicker"><img style="width:1in; height:1in;" src="progressbaroptionsicons/3middle.png"/></a>
-                <a class="aintext fontpicker"><img style="width:1in; height:1in;" src="progressbaroptionsicons/4top.png"/></a>
+		<a class="aintext selectedfontpicker"><img title="No progress bar" alt="No progress bar option" style="width:1in; height:1in;" src="progressbaroptionsicons/1no.png"/></a>
+                <a class="aintext fontpicker"><img title="Bottom progress bar" alt="Bottom progress bar option" style="width:1in; height:1in;" src="progressbaroptionsicons/2bottom.png"/></a>
+                <a class="aintext fontpicker"><img title="Under clock progress bar" alt="Under clock progress bar option" style="width:1in; height:1in;" src="progressbaroptionsicons/3middle.png"/></a>
+                <a class="aintext fontpicker"><img title="Top progress bar" alt="Top progress bar option" style="width:1in; height:1in;" src="progressbaroptionsicons/4top.png"/></a>
                 <br>
                 <br>
                 <br>
