--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -234,7 +234,7 @@
                 </div>
                 <br />
                 <br />-->
-
+		<div id="optionsdatecontainer">
                 <h2 class="textelement" style="font-family: 'Dosis';">
                     Date
                 </h2>
@@ -258,6 +258,7 @@
                 </div>
                 <br />
                 <br />
+		</div>
                 <h2 class="textelement" style="font-family: 'Dosis';">
                     Title
                 </h2>
@@ -362,6 +363,7 @@
                 <Br>
                 <br>
                 <br>
+		<div id="optionsendingcontainer">
                 <h1 id="endingoptions">Ending Options</h1>
                 <h2 class="textelement" style="font-family: 'Dosis';">Confetti Options <span class="betatag">BETA</span></h2>
                 <a class="aintext" href="#appearanceoptions" style="font-size:16px; font-family: 'Dosis', sans-serif; color:white; text-decoration: underline;">You can disable confetti for all countdowns in your Personal Options.</a>
@@ -382,6 +384,7 @@
                 <br>
                 <br>
                 <br>
+		</div>
                 <h1 id="scheduleoptions">Countdown Schedule <span class="betatag">BETA</span></h1>
                 <div class="schedule-editor" style="color: white !important;">
                     <div class="schedule-container">
@@ -428,6 +431,7 @@
                 </div>
                 <br>
                 <br>
+		<div id="optionsprogresscontainer">
                 <h1 id="progressoptions">Progress <span class="betatag">BETA</span></h1>
 		<h2 style="font-family: 'Dosis';">Starting Date</h2>
 		<input class="progressdatepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
@@ -442,6 +446,7 @@
                 <br>
                 <br>
                 <br>
+		</div>
     <br>
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
