--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -163,7 +163,7 @@
                 <br>
                 <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background-color:#00FF5E;" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
-                <a id="sidebaranchor" href="#scheduleoptions"><i style="background-color:#FF9900" class="fa-solid fa-calendar"></i> Schedule</a>
+                <a class="sidebaranchor" href="#scheduleoptions"><i style="background-color:#FF9900" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
                 <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background-color:#8426FF" class="fa-solid fa-spinner"></i> Progress</a>
             </div>
