--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1493,7 +1493,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 position:initial;
                 top:initial;
                 box-shadow: none;
-                display:initial
+                display:initial;
             }
             #settingssidebarpaneshareable{
                 width:90%;
