--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2468,6 +2468,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             background: transparent;
             padding: 20px;
             border-radius: 20px;
+		font-family: "Dosis";
         }
 
         .schedule-container input{
@@ -2491,7 +2492,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         font-weight: 100;
         outline: 1px solid #8426ff;
         background: linear-gradient(to left, rgba(40,23,64,88), #14141400);
-        font-family: 'Fredoka One';
+        font-family: "Dosis";
         border: 0px transparent;
         transition: 0.5s all;
         }
