--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -404,7 +404,7 @@
 
                         <div class="schedule-editor-section">
                             <h2 style="font-family: 'Dosis';">Regular Schedule</h2>
-                            <button class="schedule-collapsible" onclick="schedule_toggleCollapsible(this)">Show/Hide Regular Schedule</button>
+                            <button style="font-family: "Dosis";" class="schedule-collapsible" onclick="schedule_toggleCollapsible(this)">Show/Hide Regular Schedule</button>
                             <div class="schedule-content">
                                 <ul id="schedule-eventList"></ul>
                             </div>
@@ -425,7 +425,7 @@
                                 </select>
                                 <a id="schedule-addExceptionBtn"><i class="fa-solid fa-plus-circle"></i> Add Exception Day</a>
                             </div>
-                            <div id="schedule-exceptionList"></div>
+                            <div style="font-family: "Dosis";" id="schedule-exceptionList"></div>
                         </div>
                     </div>
                 </div>
