--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -13,6 +13,10 @@
 
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta name="theme-color" content="#8426ff" />
+    
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Countdown">
 
     <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
     <meta property="og:title" content="Countdown Dashboard - Michael Dors" />
