--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1494,10 +1494,10 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 padding:0px;
             }
             .sidebaranchor:hover{
-                position:initial;
-                top:initial;
-                box-shadow: none;
-                display:initial;
+                position:initial !important;
+                top:initial !important;
+                box-shadow: none !important;
+                display:initial !important;
             }
             #settingssidebarpaneshareable{
                 width:90%;
