--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -359,7 +359,7 @@
                 </h2>
                 <a class="aintext selectedfontpicker" id="fredoka" style="font-family:'Fredoka One'" onmouseup="FontFredoka('Manual');">12:34</a>
                 <a class="aintext fontpicker" id="poppins" style="font-family:'Poppins'" onmouseup="FontPoppins('Manual');">12:34</a>
-                <a class="aintext fontpicker" id="yeseva" style="font-family:'Yeseva One'" onmouseup="FontYeseva('Manual');">12:34</a>
+                <a class="aintext fontpicker" id="dmserif" style="font-family: 'DM Serif Display', serif;" onmouseup="FontDMSerif('Manual');">12:34</a>
                 <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual');">12:34</a>
                 <br>
                 <br>
@@ -2778,7 +2778,10 @@ window.onload = function() {
             FontPoppins('auto');
         }
         else if (decodeURIComponent(parameter('typeface')) == "Yeseva One") {
-            FontYeseva('auto');
+            FontDMSerif('auto'); //fallback for old depreciated font option Yeseva, replaced by DM Serif Display
+        }
+        else if (decodeURIComponent(parameter('typeface')) == "DMSerif") {
+            FontDMSerif('auto');
         }
         else if (decodeURIComponent(parameter('typeface')) == "Orbitron") {
             FontOrbitron('auto');
@@ -4394,8 +4397,8 @@ window.onload = function() {
         document.getElementById("fredoka").classList.add("selectedfontpicker");
         document.getElementById("poppins").classList.remove("selectedfontpicker");
         document.getElementById("poppins").classList.add("fontpicker");
-        document.getElementById("yeseva").classList.remove("selectedfontpicker");
-        document.getElementById("yeseva").classList.add("fontpicker");
+        document.getElementById("dmserif").classList.remove("selectedfontpicker");
+        document.getElementById("dmserif").classList.add("fontpicker");
         document.getElementById("orbitron").classList.remove("selectedfontpicker");
         document.getElementById("orbitron").classList.add("fontpicker");
 
@@ -4414,8 +4417,8 @@ window.onload = function() {
         document.getElementById("fredoka").classList.remove("selectedfontpicker");
         document.getElementById("fredoka").classList.add("fontpicker");
         document.getElementById("poppins").classList.add("selectedfontpicker");
-        document.getElementById("yeseva").classList.remove("selectedfontpicker");
-        document.getElementById("yeseva").classList.add("fontpicker");
+        document.getElementById("dmserif").classList.remove("selectedfontpicker");
+        document.getElementById("dmserif").classList.add("fontpicker");
         document.getElementById("orbitron").classList.remove("selectedfontpicker");
         document.getElementById("orbitron").classList.add("fontpicker");
 
@@ -4426,16 +4429,16 @@ window.onload = function() {
         }
     }
 
-    //set Yeseva font
-    function FontYeseva(method) {
-        document.querySelector(':root').style.setProperty('--typeface', 'Yeseva One');
+    //set DM Serif font, previously Yeseva
+    function FontDMSerif(method) {
+        document.querySelector(':root').style.setProperty('--typeface', 'DM Serif Display');
         document.querySelector(':root').style.setProperty('--comptypeface', 'Castoro');
 
         document.getElementById("fredoka").classList.remove("selectedfontpicker");
         document.getElementById("fredoka").classList.add("fontpicker");
         document.getElementById("poppins").classList.remove("selectedfontpicker");
         document.getElementById("poppins").classList.add("fontpicker");
-        document.getElementById("yeseva").classList.add("selectedfontpicker");
+        document.getElementById("dmserif").classList.add("selectedfontpicker");
         document.getElementById("orbitron").classList.remove("selectedfontpicker");
         document.getElementById("orbitron").classList.add("fontpicker");
 
@@ -4455,8 +4458,8 @@ window.onload = function() {
         document.getElementById("fredoka").classList.add("fontpicker");
         document.getElementById("poppins").classList.remove("selectedfontpicker");
         document.getElementById("poppins").classList.add("fontpicker");
-        document.getElementById("yeseva").classList.remove("selectedfontpicker");
-        document.getElementById("yeseva").classList.add("fontpicker");
+        document.getElementById("dmserif").classList.remove("selectedfontpicker");
+        document.getElementById("dmserif").classList.add("fontpicker");
         document.getElementById("orbitron").classList.add("selectedfontpicker");
 
         document.getElementById("schedule-classTitle").style.textTransform = "uppercase";
