--- a/mcacountdown/betatimer_light.html
+++ b/mcacountdown/betatimer_light.html
@@ -1471,7 +1471,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 left:-5px;
                 top:-5px;
                 padding-top:25px;
-                background-color:black;
+                background-color:white;
                 z-index:10000;
             }
             #settingssidebar::-webkit-scrollbar {
@@ -1482,7 +1482,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 font-family:'Dosis';
                 background:none;
                 text-decoration:none;
-                color:white;
+                color:black;
                 box-shadow:none;
                 border-radius: none;
                 user-select: none;
