--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1226,10 +1226,10 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
     .enabled {
         font-family: 'Fredoka One';
-        background-color: #00ff40;
+        background-color: #00ff5e;
         text-decoration: none;
         color: black;
-        box-shadow: 0 7px 0 #008f2d;
+        box-shadow: 0 7px 0 #00b041;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -1240,7 +1240,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
         .enabled:hover {
             position: relative;
-            box-shadow: 0 5px 0 #008f2d;
+            box-shadow: 0 5px 0 #00b041;
         }
 
             .enabled:hover:active {
