--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1497,6 +1497,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 padding-top:25px;
                 background-color:black;
                 z-index:10000;
+		white-space:nowrap;
             }
             #settingssidebar::-webkit-scrollbar {
                 width:0;
@@ -1516,6 +1517,8 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 margin:0px;
                 display:initial;
                 padding:0px;
+		overflow:hidden;
+		white-space:nowrap;
             }
             .sidebaranchor:hover{
                 position:initial !important;
